# Algorithmic-Implementation

./: .gitignore  CMakeLists.txt  image_funcion.csv  lista.json  main.py  notebook.py  resultados.csv
__marimo__/session/: notebook.py.json
include/: algoritmos.hpp  funciones.hpp  meta.hpp
notebooks/: notebook.py
notebooks/__marimo__/session/: notebook.py.json
notebooks/layouts/: notebook.grid.json  notebook.slides.json
src/: algorithms.cpp  funciones.cpp  main.cpp
